// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard Expandable Nav Wizard should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-wizard"
  >
    <div
      class="pf-v6-c-wizard__header"
    >
      <div
        class="pf-v6-c-wizard__close"
      >
        <button
          aria-disabled="false"
          aria-label="Close"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-wizard__title"
      >
        <h2
          class="pf-v6-c-wizard__title-text"
          id="pf-wizard-title-1"
        >
          Wizard title
        </h2>
      </div>
      <p
        class="pf-v6-c-wizard__description"
        id="pf-wizard-description-1"
      >
        Description here
      </p>
    </div>
    <button
      aria-expanded="false"
      aria-label="Wizard Toggle"
      class="pf-v6-c-wizard__toggle"
    >
      <span
        class="pf-v6-c-wizard__toggle-list"
      >
        <span
          class="pf-v6-c-wizard__toggle-list-item"
        >
          <span
            class="pf-v6-c-wizard__toggle-num"
          >
            1
          </span>
           A
        </span>
      </span>
      <span
        class="pf-v6-c-wizard__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-v6-c-wizard__outer-wrap"
    >
      <div
        class="pf-v6-c-wizard__inner-wrap"
      >
        <nav
          aria-labelledby="pf-wizard-title-1"
          class="pf-v6-c-wizard__nav"
          data-ouia-component-id="OUIA-Generated-WizardNav-3"
          data-ouia-component-type="PF6/WizardNav"
          data-ouia-safe="true"
        >
          <ol
            class="pf-v6-c-wizard__nav-list"
            role="list"
          >
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="step"
                class="pf-v6-c-wizard__nav-link pf-m-current"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                type="button"
              >
                A
              </button>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item pf-m-expandable"
            >
              <button
                aria-current="false"
                aria-expanded="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-wizard__nav-link-text"
                >
                  B
                </span>
                <span
                  class="pf-v6-c-wizard__nav-link-toggle"
                >
                  <span
                    class="pf-v6-c-wizard__nav-link-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <ol
                class="pf-v6-c-wizard__nav-list"
                role="list"
              >
                <li
                  class="pf-v6-c-wizard__nav-item"
                >
                  <button
                    aria-current="false"
                    class="pf-v6-c-wizard__nav-link"
                    data-ouia-component-id="OUIA-Generated-WizardNavItem-9"
                    data-ouia-component-type="PF6/WizardNavItem"
                    data-ouia-safe="true"
                    type="button"
                  >
                    B-1
                  </button>
                </li>
                <li
                  class="pf-v6-c-wizard__nav-item"
                >
                  <button
                    aria-current="false"
                    class="pf-v6-c-wizard__nav-link"
                    data-ouia-component-id="OUIA-Generated-WizardNavItem-10"
                    data-ouia-component-type="PF6/WizardNavItem"
                    data-ouia-safe="true"
                    type="button"
                  >
                    B-2
                  </button>
                </li>
              </ol>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-11"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                type="button"
              >
                C
              </button>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-12"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                type="button"
              >
                D
              </button>
            </li>
          </ol>
        </nav>
        <div
          class="pf-v6-c-wizard__main"
        >
          <div
            class="pf-v6-c-wizard__main-body"
          >
            <p>
              Step 1
            </p>
          </div>
        </div>
      </div>
      <footer
        class="pf-v6-c-wizard__footer"
      >
        <div
          class="pf-v6-c-action-list"
        >
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                disabled=""
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Back
                </span>
              </button>
            </div>
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-2"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="submit"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Next
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Wizard Wizard should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-wizard"
  >
    <div
      class="pf-v6-c-wizard__header"
    >
      <div
        class="pf-v6-c-wizard__close"
      >
        <button
          aria-disabled="false"
          aria-label="Close"
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-wizard__title"
      >
        <h2
          class="pf-v6-c-wizard__title-text"
          id="pf-wizard-title-0"
        >
          Wizard title
        </h2>
      </div>
      <p
        class="pf-v6-c-wizard__description"
        id="pf-wizard-description-0"
      >
        Description here
      </p>
    </div>
    <button
      aria-expanded="false"
      aria-label="Wizard Toggle"
      class="pf-v6-c-wizard__toggle"
    >
      <span
        class="pf-v6-c-wizard__toggle-list"
      >
        <span
          class="pf-v6-c-wizard__toggle-list-item"
        >
          <span
            class="pf-v6-c-wizard__toggle-num"
          >
            1
          </span>
           A
        </span>
      </span>
      <span
        class="pf-v6-c-wizard__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-v6-c-wizard__outer-wrap"
    >
      <div
        class="pf-v6-c-wizard__inner-wrap"
      >
        <nav
          aria-labelledby="pf-wizard-title-0"
          class="pf-v6-c-wizard__nav"
          data-ouia-component-id="OUIA-Generated-WizardNav-1"
          data-ouia-component-type="PF6/WizardNav"
          data-ouia-safe="true"
        >
          <ol
            class="pf-v6-c-wizard__nav-list"
            role="list"
          >
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="step"
                class="pf-v6-c-wizard__nav-link pf-m-current"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                id="step-A"
                type="button"
              >
                A
              </button>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                id="step-B"
                type="button"
              >
                B
              </button>
              <ol
                class="pf-v6-c-wizard__nav-list"
                role="list"
              >
                <li
                  class="pf-v6-c-wizard__nav-item"
                >
                  <button
                    aria-current="false"
                    class="pf-v6-c-wizard__nav-link"
                    data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
                    data-ouia-component-type="PF6/WizardNavItem"
                    data-ouia-safe="true"
                    id="step-B-1"
                    type="button"
                  >
                    B-1
                  </button>
                </li>
                <li
                  class="pf-v6-c-wizard__nav-item"
                >
                  <button
                    aria-current="false"
                    class="pf-v6-c-wizard__nav-link"
                    data-ouia-component-id="OUIA-Generated-WizardNavItem-4"
                    data-ouia-component-type="PF6/WizardNavItem"
                    data-ouia-safe="true"
                    id="step-B-2"
                    type="button"
                  >
                    B-2
                  </button>
                </li>
              </ol>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-5"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                id="step-C"
                type="button"
              >
                C
              </button>
            </li>
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="false"
                class="pf-v6-c-wizard__nav-link"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-6"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                id="step-D"
                type="button"
              >
                D
              </button>
            </li>
          </ol>
        </nav>
        <div
          class="pf-v6-c-wizard__main"
        >
          <div
            class="pf-v6-c-wizard__main-body"
          >
            <p>
              Step 1
            </p>
          </div>
        </div>
      </div>
      <footer
        class="pf-v6-c-wizard__footer"
      >
        <div
          class="pf-v6-c-action-list"
        >
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                disabled=""
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Back
                </span>
              </button>
            </div>
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="submit"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Next
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Wizard bare wiz 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-wizard"
    id="inPageWizWithAnchorsId"
  >
    <button
      aria-expanded="false"
      aria-label="Wizard Toggle"
      class="pf-v6-c-wizard__toggle"
    >
      <span
        class="pf-v6-c-wizard__toggle-list"
      >
        <span
          class="pf-v6-c-wizard__toggle-list-item"
        >
          <span
            class="pf-v6-c-wizard__toggle-num"
          >
            1
          </span>
           A
        </span>
      </span>
      <span
        class="pf-v6-c-wizard__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
    <div
      class="pf-v6-c-wizard__outer-wrap"
    >
      <div
        class="pf-v6-c-wizard__inner-wrap"
      >
        <nav
          class="pf-v6-c-wizard__nav"
          data-ouia-component-id="OUIA-Generated-WizardNav-5"
          data-ouia-component-type="PF6/WizardNav"
          data-ouia-safe="true"
        >
          <ol
            class="pf-v6-c-wizard__nav-list"
            role="list"
          >
            <li
              class="pf-v6-c-wizard__nav-item"
            >
              <button
                aria-current="step"
                class="pf-v6-c-wizard__nav-link pf-m-current"
                data-ouia-component-id="OUIA-Generated-WizardNavItem-13"
                data-ouia-component-type="PF6/WizardNavItem"
                data-ouia-safe="true"
                type="button"
              >
                A
              </button>
            </li>
          </ol>
        </nav>
        <div
          class="pf-v6-c-wizard__main"
        >
          <div
            class="pf-v6-c-wizard__main-body"
          >
            <p>
              Step 1
            </p>
          </div>
        </div>
      </div>
      <footer
        class="pf-v6-c-wizard__footer"
      >
        <div
          class="pf-v6-c-action-list"
        >
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-3"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                disabled=""
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Back
                </span>
              </button>
            </div>
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-3"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="submit"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Next
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-v6-c-action-list__group"
          >
            <div
              class="pf-v6-c-action-list__item"
            >
              <button
                aria-disabled="false"
                class="pf-v6-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-3"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;
